--- a/gifts.html
+++ b/gifts.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="tabs-container">
-        <button onclick="toggleMusic()" id="musicButton" class="music-button"><i class="fas fa-music"></i></button>
+        <button onclick="toggleMusic()" id="musicButton" class="music-button"><i id="botamsc" class="fas fa-music"></i></button>
         <div class="tabs">
             <button class="tab-button active" onclick="filterGifts('all')"><i class="fas fa-th-large"></i></button>
             <button class="tab-button" onclick="filterGifts('tecnologia')"><i class="fas fa-laptop"></i></button>
