--- a/gifts.html
+++ b/gifts.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="container">
-        <h3>Aqui estão algumas sugestões de presentes:</h3>
+        <h3>Aqui estão algumas sugestões de presentes(podem clicar para + info):</h3>
 
         <div class="gift-cards-container" id="giftCardsContainer">
             <!-- Cartões de presente serão carregados aqui -->
