--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <h1>Bem-vindo ao Guia de Presentes</h1>
     </header>
     <div class="container">
-        <h3>Olá! Este website serve para ajudar a escolher o melhor presente a oferecer neste Natal ao Dr. Gonçalo Silva. Há um leque variado de opções para todos os gostos e feitios. Não se sintam obrigados a escolher nada daqui.</h3>
+        <h3>Olá! Este website serve para ajudar a escolher o melhor presente a oferecer neste Natal ao Gonçalo Silva. Há um leque variado de opções para todos os gostos e feitios.</h3>
+        <h3>Não se sintam obrigados a escolher nada daqui.</h3>
         <a href="gifts.html" class="button">Clica aqui para revelar os itens.</a>
     </div>
     <footer>
